--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "ota-backend",
+  "name": "esp32-ota-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vercel dev"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
