--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
     "dev": "vercel dev",
     "start": "vercel dev"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
