--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "esp32-backend",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vercel dev",
     "start": "vercel dev"
